German/Lenguajes y compiladores/Lab3/tests/bad/bad15.imp
data Bool = True | False

-- repeated type parameters
method suma <a,a> (n : Bool, n : Bool) returns (r : Bool)
{
    var m : N
} 
